Fixed event sort default, select2 dark theme filter list colors (too light), position of actions on events.

--- a/resources/assets/css/dark-theme.css
+++ b/resources/assets/css/dark-theme.css
@@ -271,3 +271,7 @@ li.selected:hover {
 	right: -15px;
 	padding: 5px;
 }
+
+li.select2-results__option {
+	color: #989898;
+}
